welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:13: error: not found: value minVal
		if(nums(i) < minVal)
                             ^extrema:15: error: not found: value minVal
			minVal = nums(i);
                        ^extrema:18: error: not found: value minVal
	return maxVal - minVal;
                        ^